# Lancelot

./: .gitignore  CMakeLists.txt  README
DigitDetector/: CMakeLists.txt  makefile  objects.mk  subdir.mk
DigitDetector/src/: DigitDetector.cpp  DigitDetector.h  DigitDetector_interface.cpp  DigitDetector_interface.h  TwoLayerNNFaster.cpp  TwoLayerNNFaster.h  main.cpp  util.cpp  util.h
config/: config.ini
dsst/: CMakeLists.txt
dsst/CorrelationTracker/: CorrelationTracker.cpp  CorrelationTracker.h  correlationtracker_export.h
dsst/CorrelationTracker/dsst_tracker/: dsst_tracker.cpp
src/: CharacterRecognition.cpp  CharacterRecognition.h  imageTrans.cpp  imageTrans.h  lancelot_functions.cpp  lancelot_functions.h  main.cpp  my_serial.cpp  my_serial.h  trace.h
